parser_module/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    ARRAY
    BREAK
    CONTINUE
    DICTIONARY
    FOREACH
    MAP
    NOT
    OR
    SET
    THEN
    UNTIL

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement_list_opt -> statement_list
Rule 5     statement_list_opt -> empty
Rule 6     statement -> declaration_stmt
Rule 7     statement -> assignment_stmt
Rule 8     statement -> function_def_stmt
Rule 9     statement -> function_call_stmt
Rule 10    statement -> if_stmt
Rule 11    statement -> while_stmt
Rule 12    statement -> return_stmt
Rule 13    declaration_stmt -> type_specifier IDENTIFIER EQUALS expression EOL
Rule 14    type_specifier -> INT_TYPE
Rule 15    type_specifier -> FLOAT_TYPE
Rule 16    type_specifier -> STRING_TYPE
Rule 17    type_specifier -> BOOL_TYPE
Rule 18    type_specifier -> DATE_TYPE
Rule 19    type_specifier -> TIME_TYPE
Rule 20    type_specifier -> VOID
Rule 21    assignment_stmt -> IDENTIFIER EQUALS expression EOL
Rule 22    function_def_stmt -> FUNCTION type_specifier IDENTIFIER LPAREN param_list RPAREN block_stmt
Rule 23    param_list -> param_list COMMA param
Rule 24    param_list -> param
Rule 25    param_list -> empty
Rule 26    param -> type_specifier IDENTIFIER
Rule 27    block_stmt -> LBRACKET statement_list_opt RBRACKET
Rule 28    callable -> IDENTIFIER
Rule 29    callable -> BOOK
Rule 30    callable -> GEN
Rule 31    callable -> REG
Rule 32    callable -> DISPLAY
Rule 33    function_call_stmt -> function_call EOL
Rule 34    function_call -> callable LPAREN arg_list RPAREN
Rule 35    arg_list -> arg_list COMMA expression
Rule 36    arg_list -> expression
Rule 37    arg_list -> empty
Rule 38    if_stmt -> IF LPAREN expression RPAREN block_stmt
Rule 39    if_stmt -> IF LPAREN expression RPAREN block_stmt ELSE block_stmt
Rule 40    while_stmt -> WHILE LPAREN expression RPAREN block_stmt
Rule 41    return_stmt -> RETURN expression EOL
Rule 42    expression -> expression PLUS expression
Rule 43    expression -> expression MINUS expression
Rule 44    expression -> expression TIMES expression
Rule 45    expression -> expression DIVIDE expression
Rule 46    expression -> expression LE expression
Rule 47    expression -> expression GE expression
Rule 48    expression -> expression LT expression
Rule 49    expression -> expression GT expression
Rule 50    expression -> expression EQ expression
Rule 51    expression -> expression NEQ expression
Rule 52    expression -> LPAREN expression RPAREN
Rule 53    expression -> NUMBER
Rule 54    expression -> FLOAT_NUM
Rule 55    expression -> STRING_LITERAL
Rule 56    expression -> BOOLEAN_VAL
Rule 57    expression -> DATE_VAL
Rule 58    expression -> TIME_VAL
Rule 59    expression -> IDENTIFIER
Rule 60    expression -> function_call
Rule 61    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
ARRAY                : 
BOOK                 : 29
BOOLEAN_VAL          : 56
BOOL_TYPE            : 17
BREAK                : 
COMMA                : 23 35
CONTINUE             : 
DATE_TYPE            : 18
DATE_VAL             : 57
DICTIONARY           : 
DISPLAY              : 32
DIVIDE               : 45
ELSE                 : 39
EOL                  : 13 21 33 41
EQ                   : 50
EQUALS               : 13 21
FLOAT_NUM            : 54
FLOAT_TYPE           : 15
FOREACH              : 
FUNCTION             : 22
GE                   : 47
GEN                  : 30
GT                   : 49
IDENTIFIER           : 13 21 22 26 28 59
IF                   : 38 39
INT_TYPE             : 14
LBRACKET             : 27
LE                   : 46
LPAREN               : 22 34 38 39 40 52
LT                   : 48
MAP                  : 
MINUS                : 43
NEQ                  : 51
NOT                  : 
NUMBER               : 53
OR                   : 
PLUS                 : 42
RBRACKET             : 27
REG                  : 31
RETURN               : 41
RPAREN               : 22 34 38 39 40 52
SET                  : 
STRING_LITERAL       : 55
STRING_TYPE          : 16
THEN                 : 
TIMES                : 44
TIME_TYPE            : 19
TIME_VAL             : 58
UNTIL                : 
VOID                 : 20
WHILE                : 40
error                : 

Nonterminals, with rules where they appear

arg_list             : 34 35
assignment_stmt      : 7
block_stmt           : 22 38 39 39 40
callable             : 34
declaration_stmt     : 6
empty                : 5 25 37
expression           : 13 21 35 36 38 39 40 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52
function_call        : 33 60
function_call_stmt   : 9
function_def_stmt    : 8
if_stmt              : 10
param                : 23 24
param_list           : 22 23
program              : 0
return_stmt          : 12
statement            : 2 3
statement_list       : 1 2 4
statement_list_opt   : 27
type_specifier       : 13 22 26
while_stmt           : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (6) statement -> . declaration_stmt
    (7) statement -> . assignment_stmt
    (8) statement -> . function_def_stmt
    (9) statement -> . function_call_stmt
    (10) statement -> . if_stmt
    (11) statement -> . while_stmt
    (12) statement -> . return_stmt
    (13) declaration_stmt -> . type_specifier IDENTIFIER EQUALS expression EOL
    (21) assignment_stmt -> . IDENTIFIER EQUALS expression EOL
    (22) function_def_stmt -> . FUNCTION type_specifier IDENTIFIER LPAREN param_list RPAREN block_stmt
    (33) function_call_stmt -> . function_call EOL
    (38) if_stmt -> . IF LPAREN expression RPAREN block_stmt
    (39) if_stmt -> . IF LPAREN expression RPAREN block_stmt ELSE block_stmt
    (40) while_stmt -> . WHILE LPAREN expression RPAREN block_stmt
    (41) return_stmt -> . RETURN expression EOL
    (14) type_specifier -> . INT_TYPE
    (15) type_specifier -> . FLOAT_TYPE
    (16) type_specifier -> . STRING_TYPE
    (17) type_specifier -> . BOOL_TYPE
    (18) type_specifier -> . DATE_TYPE
    (19) type_specifier -> . TIME_TYPE
    (20) type_specifier -> . VOID
    (34) function_call -> . callable LPAREN arg_list RPAREN
    (28) callable -> . IDENTIFIER
    (29) callable -> . BOOK
    (30) callable -> . GEN
    (31) callable -> . REG
    (32) callable -> . DISPLAY

    IDENTIFIER      shift and go to state 12
    FUNCTION        shift and go to state 13
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    INT_TYPE        shift and go to state 18
    FLOAT_TYPE      shift and go to state 19
    STRING_TYPE     shift and go to state 20
    BOOL_TYPE       shift and go to state 21
    DATE_TYPE       shift and go to state 22
    TIME_TYPE       shift and go to state 23
    VOID            shift and go to state 24
    BOOK            shift and go to state 26
    GEN             shift and go to state 27
    REG             shift and go to state 28
    DISPLAY         shift and go to state 29

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    declaration_stmt               shift and go to state 4
    assignment_stmt                shift and go to state 5
    function_def_stmt              shift and go to state 6
    function_call_stmt             shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    return_stmt                    shift and go to state 10
    type_specifier                 shift and go to state 11
    function_call                  shift and go to state 14
    callable                       shift and go to state 25

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (6) statement -> . declaration_stmt
    (7) statement -> . assignment_stmt
    (8) statement -> . function_def_stmt
    (9) statement -> . function_call_stmt
    (10) statement -> . if_stmt
    (11) statement -> . while_stmt
    (12) statement -> . return_stmt
    (13) declaration_stmt -> . type_specifier IDENTIFIER EQUALS expression EOL
    (21) assignment_stmt -> . IDENTIFIER EQUALS expression EOL
    (22) function_def_stmt -> . FUNCTION type_specifier IDENTIFIER LPAREN param_list RPAREN block_stmt
    (33) function_call_stmt -> . function_call EOL
    (38) if_stmt -> . IF LPAREN expression RPAREN block_stmt
    (39) if_stmt -> . IF LPAREN expression RPAREN block_stmt ELSE block_stmt
    (40) while_stmt -> . WHILE LPAREN expression RPAREN block_stmt
    (41) return_stmt -> . RETURN expression EOL
    (14) type_specifier -> . INT_TYPE
    (15) type_specifier -> . FLOAT_TYPE
    (16) type_specifier -> . STRING_TYPE
    (17) type_specifier -> . BOOL_TYPE
    (18) type_specifier -> . DATE_TYPE
    (19) type_specifier -> . TIME_TYPE
    (20) type_specifier -> . VOID
    (34) function_call -> . callable LPAREN arg_list RPAREN
    (28) callable -> . IDENTIFIER
    (29) callable -> . BOOK
    (30) callable -> . GEN
    (31) callable -> . REG
    (32) callable -> . DISPLAY

    $end            reduce using rule 1 (program -> statement_list .)
    IDENTIFIER      shift and go to state 12
    FUNCTION        shift and go to state 13
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    RETURN          shift and go to state 17
    INT_TYPE        shift and go to state 18
    FLOAT_TYPE      shift and go to state 19
    STRING_TYPE     shift and go to state 20
    BOOL_TYPE       shift and go to state 21
    DATE_TYPE       shift and go to state 22
    TIME_TYPE       shift and go to state 23
    VOID            shift and go to state 24
    BOOK            shift and go to state 26
    GEN             shift and go to state 27
    REG             shift and go to state 28
    DISPLAY         shift and go to state 29

    statement                      shift and go to state 30
    declaration_stmt               shift and go to state 4
    assignment_stmt                shift and go to state 5
    function_def_stmt              shift and go to state 6
    function_call_stmt             shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    return_stmt                    shift and go to state 10
    type_specifier                 shift and go to state 11
    function_call                  shift and go to state 14
    callable                       shift and go to state 25

state 3

    (3) statement_list -> statement .

    IDENTIFIER      reduce using rule 3 (statement_list -> statement .)
    FUNCTION        reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    RETURN          reduce using rule 3 (statement_list -> statement .)
    INT_TYPE        reduce using rule 3 (statement_list -> statement .)
    FLOAT_TYPE      reduce using rule 3 (statement_list -> statement .)
    STRING_TYPE     reduce using rule 3 (statement_list -> statement .)
    BOOL_TYPE       reduce using rule 3 (statement_list -> statement .)
    DATE_TYPE       reduce using rule 3 (statement_list -> statement .)
    TIME_TYPE       reduce using rule 3 (statement_list -> statement .)
    VOID            reduce using rule 3 (statement_list -> statement .)
    BOOK            reduce using rule 3 (statement_list -> statement .)
    GEN             reduce using rule 3 (statement_list -> statement .)
    REG             reduce using rule 3 (statement_list -> statement .)
    DISPLAY         reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACKET        reduce using rule 3 (statement_list -> statement .)


state 4

    (6) statement -> declaration_stmt .

    IDENTIFIER      reduce using rule 6 (statement -> declaration_stmt .)
    FUNCTION        reduce using rule 6 (statement -> declaration_stmt .)
    IF              reduce using rule 6 (statement -> declaration_stmt .)
    WHILE           reduce using rule 6 (statement -> declaration_stmt .)
    RETURN          reduce using rule 6 (statement -> declaration_stmt .)
    INT_TYPE        reduce using rule 6 (statement -> declaration_stmt .)
    FLOAT_TYPE      reduce using rule 6 (statement -> declaration_stmt .)
    STRING_TYPE     reduce using rule 6 (statement -> declaration_stmt .)
    BOOL_TYPE       reduce using rule 6 (statement -> declaration_stmt .)
    DATE_TYPE       reduce using rule 6 (statement -> declaration_stmt .)
    TIME_TYPE       reduce using rule 6 (statement -> declaration_stmt .)
    VOID            reduce using rule 6 (statement -> declaration_stmt .)
    BOOK            reduce using rule 6 (statement -> declaration_stmt .)
    GEN             reduce using rule 6 (statement -> declaration_stmt .)
    REG             reduce using rule 6 (statement -> declaration_stmt .)
    DISPLAY         reduce using rule 6 (statement -> declaration_stmt .)
    $end            reduce using rule 6 (statement -> declaration_stmt .)
    RBRACKET        reduce using rule 6 (statement -> declaration_stmt .)


state 5

    (7) statement -> assignment_stmt .

    IDENTIFIER      reduce using rule 7 (statement -> assignment_stmt .)
    FUNCTION        reduce using rule 7 (statement -> assignment_stmt .)
    IF              reduce using rule 7 (statement -> assignment_stmt .)
    WHILE           reduce using rule 7 (statement -> assignment_stmt .)
    RETURN          reduce using rule 7 (statement -> assignment_stmt .)
    INT_TYPE        reduce using rule 7 (statement -> assignment_stmt .)
    FLOAT_TYPE      reduce using rule 7 (statement -> assignment_stmt .)
    STRING_TYPE     reduce using rule 7 (statement -> assignment_stmt .)
    BOOL_TYPE       reduce using rule 7 (statement -> assignment_stmt .)
    DATE_TYPE       reduce using rule 7 (statement -> assignment_stmt .)
    TIME_TYPE       reduce using rule 7 (statement -> assignment_stmt .)
    VOID            reduce using rule 7 (statement -> assignment_stmt .)
    BOOK            reduce using rule 7 (statement -> assignment_stmt .)
    GEN             reduce using rule 7 (statement -> assignment_stmt .)
    REG             reduce using rule 7 (statement -> assignment_stmt .)
    DISPLAY         reduce using rule 7 (statement -> assignment_stmt .)
    $end            reduce using rule 7 (statement -> assignment_stmt .)
    RBRACKET        reduce using rule 7 (statement -> assignment_stmt .)


state 6

    (8) statement -> function_def_stmt .

    IDENTIFIER      reduce using rule 8 (statement -> function_def_stmt .)
    FUNCTION        reduce using rule 8 (statement -> function_def_stmt .)
    IF              reduce using rule 8 (statement -> function_def_stmt .)
    WHILE           reduce using rule 8 (statement -> function_def_stmt .)
    RETURN          reduce using rule 8 (statement -> function_def_stmt .)
    INT_TYPE        reduce using rule 8 (statement -> function_def_stmt .)
    FLOAT_TYPE      reduce using rule 8 (statement -> function_def_stmt .)
    STRING_TYPE     reduce using rule 8 (statement -> function_def_stmt .)
    BOOL_TYPE       reduce using rule 8 (statement -> function_def_stmt .)
    DATE_TYPE       reduce using rule 8 (statement -> function_def_stmt .)
    TIME_TYPE       reduce using rule 8 (statement -> function_def_stmt .)
    VOID            reduce using rule 8 (statement -> function_def_stmt .)
    BOOK            reduce using rule 8 (statement -> function_def_stmt .)
    GEN             reduce using rule 8 (statement -> function_def_stmt .)
    REG             reduce using rule 8 (statement -> function_def_stmt .)
    DISPLAY         reduce using rule 8 (statement -> function_def_stmt .)
    $end            reduce using rule 8 (statement -> function_def_stmt .)
    RBRACKET        reduce using rule 8 (statement -> function_def_stmt .)


state 7

    (9) statement -> function_call_stmt .

    IDENTIFIER      reduce using rule 9 (statement -> function_call_stmt .)
    FUNCTION        reduce using rule 9 (statement -> function_call_stmt .)
    IF              reduce using rule 9 (statement -> function_call_stmt .)
    WHILE           reduce using rule 9 (statement -> function_call_stmt .)
    RETURN          reduce using rule 9 (statement -> function_call_stmt .)
    INT_TYPE        reduce using rule 9 (statement -> function_call_stmt .)
    FLOAT_TYPE      reduce using rule 9 (statement -> function_call_stmt .)
    STRING_TYPE     reduce using rule 9 (statement -> function_call_stmt .)
    BOOL_TYPE       reduce using rule 9 (statement -> function_call_stmt .)
    DATE_TYPE       reduce using rule 9 (statement -> function_call_stmt .)
    TIME_TYPE       reduce using rule 9 (statement -> function_call_stmt .)
    VOID            reduce using rule 9 (statement -> function_call_stmt .)
    BOOK            reduce using rule 9 (statement -> function_call_stmt .)
    GEN             reduce using rule 9 (statement -> function_call_stmt .)
    REG             reduce using rule 9 (statement -> function_call_stmt .)
    DISPLAY         reduce using rule 9 (statement -> function_call_stmt .)
    $end            reduce using rule 9 (statement -> function_call_stmt .)
    RBRACKET        reduce using rule 9 (statement -> function_call_stmt .)


state 8

    (10) statement -> if_stmt .

    IDENTIFIER      reduce using rule 10 (statement -> if_stmt .)
    FUNCTION        reduce using rule 10 (statement -> if_stmt .)
    IF              reduce using rule 10 (statement -> if_stmt .)
    WHILE           reduce using rule 10 (statement -> if_stmt .)
    RETURN          reduce using rule 10 (statement -> if_stmt .)
    INT_TYPE        reduce using rule 10 (statement -> if_stmt .)
    FLOAT_TYPE      reduce using rule 10 (statement -> if_stmt .)
    STRING_TYPE     reduce using rule 10 (statement -> if_stmt .)
    BOOL_TYPE       reduce using rule 10 (statement -> if_stmt .)
    DATE_TYPE       reduce using rule 10 (statement -> if_stmt .)
    TIME_TYPE       reduce using rule 10 (statement -> if_stmt .)
    VOID            reduce using rule 10 (statement -> if_stmt .)
    BOOK            reduce using rule 10 (statement -> if_stmt .)
    GEN             reduce using rule 10 (statement -> if_stmt .)
    REG             reduce using rule 10 (statement -> if_stmt .)
    DISPLAY         reduce using rule 10 (statement -> if_stmt .)
    $end            reduce using rule 10 (statement -> if_stmt .)
    RBRACKET        reduce using rule 10 (statement -> if_stmt .)


state 9

    (11) statement -> while_stmt .

    IDENTIFIER      reduce using rule 11 (statement -> while_stmt .)
    FUNCTION        reduce using rule 11 (statement -> while_stmt .)
    IF              reduce using rule 11 (statement -> while_stmt .)
    WHILE           reduce using rule 11 (statement -> while_stmt .)
    RETURN          reduce using rule 11 (statement -> while_stmt .)
    INT_TYPE        reduce using rule 11 (statement -> while_stmt .)
    FLOAT_TYPE      reduce using rule 11 (statement -> while_stmt .)
    STRING_TYPE     reduce using rule 11 (statement -> while_stmt .)
    BOOL_TYPE       reduce using rule 11 (statement -> while_stmt .)
    DATE_TYPE       reduce using rule 11 (statement -> while_stmt .)
    TIME_TYPE       reduce using rule 11 (statement -> while_stmt .)
    VOID            reduce using rule 11 (statement -> while_stmt .)
    BOOK            reduce using rule 11 (statement -> while_stmt .)
    GEN             reduce using rule 11 (statement -> while_stmt .)
    REG             reduce using rule 11 (statement -> while_stmt .)
    DISPLAY         reduce using rule 11 (statement -> while_stmt .)
    $end            reduce using rule 11 (statement -> while_stmt .)
    RBRACKET        reduce using rule 11 (statement -> while_stmt .)


state 10

    (12) statement -> return_stmt .

    IDENTIFIER      reduce using rule 12 (statement -> return_stmt .)
    FUNCTION        reduce using rule 12 (statement -> return_stmt .)
    IF              reduce using rule 12 (statement -> return_stmt .)
    WHILE           reduce using rule 12 (statement -> return_stmt .)
    RETURN          reduce using rule 12 (statement -> return_stmt .)
    INT_TYPE        reduce using rule 12 (statement -> return_stmt .)
    FLOAT_TYPE      reduce using rule 12 (statement -> return_stmt .)
    STRING_TYPE     reduce using rule 12 (statement -> return_stmt .)
    BOOL_TYPE       reduce using rule 12 (statement -> return_stmt .)
    DATE_TYPE       reduce using rule 12 (statement -> return_stmt .)
    TIME_TYPE       reduce using rule 12 (statement -> return_stmt .)
    VOID            reduce using rule 12 (statement -> return_stmt .)
    BOOK            reduce using rule 12 (statement -> return_stmt .)
    GEN             reduce using rule 12 (statement -> return_stmt .)
    REG             reduce using rule 12 (statement -> return_stmt .)
    DISPLAY         reduce using rule 12 (statement -> return_stmt .)
    $end            reduce using rule 12 (statement -> return_stmt .)
    RBRACKET        reduce using rule 12 (statement -> return_stmt .)


state 11

    (13) declaration_stmt -> type_specifier . IDENTIFIER EQUALS expression EOL

    IDENTIFIER      shift and go to state 31


state 12

    (21) assignment_stmt -> IDENTIFIER . EQUALS expression EOL
    (28) callable -> IDENTIFIER .

    EQUALS          shift and go to state 32
    LPAREN          reduce using rule 28 (callable -> IDENTIFIER .)


state 13

    (22) function_def_stmt -> FUNCTION . type_specifier IDENTIFIER LPAREN param_list RPAREN block_stmt
    (14) type_specifier -> . INT_TYPE
    (15) type_specifier -> . FLOAT_TYPE
    (16) type_specifier -> . STRING_TYPE
    (17) type_specifier -> . BOOL_TYPE
    (18) type_specifier -> . DATE_TYPE
    (19) type_specifier -> . TIME_TYPE
    (20) type_specifier -> . VOID

    INT_TYPE        shift and go to state 18
    FLOAT_TYPE      shift and go to state 19
    STRING_TYPE     shift and go to state 20
    BOOL_TYPE       shift and go to state 21
    DATE_TYPE       shift and go to state 22
    TIME_TYPE       shift and go to state 23
    VOID            shift and go to state 24

    type_specifier                 shift and go to state 33

state 14

    (33) function_call_stmt -> function_call . EOL

    EOL             shift and go to state 34


state 15

    (38) if_stmt -> IF . LPAREN expression RPAREN block_stmt
    (39) if_stmt -> IF . LPAREN expression RPAREN block_stmt ELSE block_stmt

    LPAREN          shift and go to state 35


state 16

    (40) while_stmt -> WHILE . LPAREN expression RPAREN block_stmt

    LPAREN          shift and go to state 36


state 17

    (41) return_stmt -> RETURN . expression EOL
    (42) expression -> . expression PLUS expression
    (43) expression -> . expression MINUS expression
    (44) expression -> . expression TIMES expression
    (45) expression -> . expression DIVIDE expression
    (46) expression -> . expression LE expression
    (47) expression -> . expression GE expression
    (48) expression -> . expression LT expression
    (49) expression -> . expression GT expression
    (50) expression -> . expression EQ expression
    (51) expression -> . expression NEQ expression
    (52) expression -> . LPAREN expression RPAREN
    (53) expression -> . NUMBER
    (54) expression -> . FLOAT_NUM
    (55) expression -> . STRING_LITERAL
    (56) expression -> . BOOLEAN_VAL
    (57) expression -> . DATE_VAL
    (58) expression -> . TIME_VAL
    (59) expression -> . IDENTIFIER
    (60) expression -> . function_call
    (34) function_call -> . callable LPAREN arg_list RPAREN
    (28) callable -> . IDENTIFIER
    (29) callable -> . BOOK
    (30) callable -> . GEN
    (31) callable -> . REG
    (32) callable -> . DISPLAY

    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 39
    FLOAT_NUM       shift and go to state 40
    STRING_LITERAL  shift and go to state 41
    BOOLEAN_VAL     shift and go to state 42
    DATE_VAL        shift and go to state 43
    TIME_VAL        shift and go to state 44
    IDENTIFIER      shift and go to state 45
    BOOK            shift and go to state 26
    GEN             shift and go to state 27
    REG             shift and go to state 28
    DISPLAY         shift and go to state 29

    expression                     shift and go to state 37
    function_call                  shift and go to state 46
    callable                       shift and go to state 25

state 18

    (14) type_specifier -> INT_TYPE .

    IDENTIFIER      reduce using rule 14 (type_specifier -> INT_TYPE .)


state 19

    (15) type_specifier -> FLOAT_TYPE .

    IDENTIFIER      reduce using rule 15 (type_specifier -> FLOAT_TYPE .)


state 20

    (16) type_specifier -> STRING_TYPE .

    IDENTIFIER      reduce using rule 16 (type_specifier -> STRING_TYPE .)


state 21

    (17) type_specifier -> BOOL_TYPE .

    IDENTIFIER      reduce using rule 17 (type_specifier -> BOOL_TYPE .)


state 22

    (18) type_specifier -> DATE_TYPE .

    IDENTIFIER      reduce using rule 18 (type_specifier -> DATE_TYPE .)


state 23

    (19) type_specifier -> TIME_TYPE .

    IDENTIFIER      reduce using rule 19 (type_specifier -> TIME_TYPE .)


state 24

    (20) type_specifier -> VOID .

    IDENTIFIER      reduce using rule 20 (type_specifier -> VOID .)


state 25

    (34) function_call -> callable . LPAREN arg_list RPAREN

    LPAREN          shift and go to state 47


state 26

    (29) callable -> BOOK .

    LPAREN          reduce using rule 29 (callable -> BOOK .)


state 27

    (30) callable -> GEN .

    LPAREN          reduce using rule 30 (callable -> GEN .)


state 28

    (31) callable -> REG .

    LPAREN          reduce using rule 31 (callable -> REG .)


state 29

    (32) callable -> DISPLAY .

    LPAREN          reduce using rule 32 (callable -> DISPLAY .)


state 30

    (2) statement_list -> statement_list statement .
